--- a/IndustrialServices/Views/Home/Index.cshtml
+++ b/IndustrialServices/Views/Home/Index.cshtml
@@ -80,25 +80,11 @@
                             <h5 class="card-title text-white" style="padding:20px; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size:20px;">Our Training</h5>
                             <div class="container mt-5 mb-5">
                                 <div class="row g-4">
+                                    <div id="sug-pelatihan">
+                                    
+                                    </div>
+   
 
-                                    <div class="col col-lg-12">
-                                        <div class="card" style="background-color: rgba(255,255,255,0.5);border:none;">
-                                            <div class="card-body">
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col col-lg-12">
-                                        <div class="card" style="background-color: rgba(255,255,255,0.5);border:none;">
-                                            <div class="card-body">
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col col-lg-12">
-                                        <div class="card" style="background-color: rgba(255,255,255,0.5);border:none;">
-                                            <div class="card-body">
-                                            </div>
-                                        </div>
-                                    </div>
 
 
                                 </div>
@@ -127,25 +113,10 @@
             </div>
         </div>
 
-    <div class="row">
-        <div class="col-6 col-lg-4 mb-5 mb-md-5">
-            <div class="card border rounded-3 sk-fade h-100">
-                <div class="card-zoom position-relative rounded-bottom-0">
-                        <a class="card-img d-block sk-thumbnail img-ratio-3 rounded-bottom-0" href="https://maps.app.goo.gl/xG12byCagHAPUSuY9">
-                        <img class="shadow-light-lg img-fluid" src="/assets/img/Bukta Abrory.jpg"/>
-                    </a>
-                    <div class="card-footer p-3">
-                        <h6 class="fw-bolder line-clamp-2 mb-0">Biografi Dosen Terbaik di Politeknik Astra! Mencapai aksdlaklsd dalam 1 tahun terakhir.</h6>
-                            <span style="color:rgba(0,0,0,0.4);font-size:14px;">31 Desember 2023</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-
+        <div id="article-list" class="row g-2"></div>
 
 
     </div>
-</div>
 </div>
 
 
@@ -212,9 +183,215 @@
     .carousel-indicators .active {
         background-color: #fff; /* Active circle color */
     }
+
+    .card::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: radial-gradient(circle at center, transparent 0%, rgba(0, 0, 0, 0.8) 80%);
+        opacity: 0;
+        transition: transform 0.5s ease;
+    }
+
+    .card:hover .zoom-on-hover {
+        transform: scale(1.05);
+        transition: transform 0.5s ease;
+    }
 </style>
 
+<script>
+    loadArtikels();
 
+    function loadArtikels() {
+        var hostname = "https://localhost:7033/";
+        var url = hostname + "GetAllArtikelsinHome";
+        var method = "GET";
+
+        $('#article-list').empty();
+
+        $.ajax({
+            url: url,
+            method: method,
+            contentType: "application/json",
+            success: function (data) {
+                var articleList = data.data;
+
+                articleList.forEach(function (article) {
+                    // Ubah format tanggal
+                    var formattedDate = new Date(article.tanggal_rilis).toLocaleDateString('en-US', {
+                        day: 'numeric',
+                        month: 'long',
+                        year: 'numeric'
+                    });
+
+                    var maxTitleLength = 75; // Set the maximum length for the title
+
+                    // Truncate the title if it exceeds the maximum length
+                    var truncatedTitle = article.judul_artikel.length > maxTitleLength ?
+                        article.judul_artikel.substring(0, maxTitleLength) + '...' :
+                        article.judul_artikel;
+
+                    var articleHtml =
+                        '<div class="col-6 col-lg-4 mb-5 mb-md-5">' +
+                        '<a style="color:black;" class="card-img d-block sk-thumbnail img-ratio-3 rounded-bottom-0" href="/Home/ArtikelDetail?id=' + article.id_artikel + '">' +
+                        '<div class="card border rounded-3 sk-fade h-100">' +
+                        '<div class="card-zoom position-relative rounded-bottom-0">' +
+                        '<img class="shadow-light-lg img-fluid zoom-on-hover" src="/assets/img/' + article.sampul_artikel + '"/>' +
+                        '<div class="card-footer p-3">' +
+                        '<h6 class="fw-bolder line-clamp-2 mb-0">' + truncatedTitle + '</h6>' +
+                        '<span style="color:rgba(0,0,0,0.4);font-size:14px;">' + formattedDate + '</span>' +
+                        '</div>' +
+                        '</div>' +
+                        '</div>' +
+                        '</a>' +
+                        '</div>';
+
+                    $('#article-list').append(articleHtml);
+                });
+            },
+            error: function (xhr, status, error) {
+                console.error("Error:", error);
+            }
+        });
+    }
+
+    loadPelatihan();
+
+    function loadPelatihan() {
+        var hostname = "https://localhost:7033/";
+        var url = hostname + "GetAllPelatihaninHome";
+        var method = "GET";
+
+        // Define the formatDate function
+        function formatDate(dateAwal, dateAkhir) {
+            var options = { day: 'numeric', month: 'long', year: 'numeric' };
+            var awal = new Date(dateAwal);
+            var akhir = new Date(dateAkhir);
+
+            // Jika bulan dan tahunnya sama
+            if (awal.getFullYear() === akhir.getFullYear() && awal.getMonth() === akhir.getMonth()) {
+                options.month = 'long';
+                return awal.getDate() + ' - ' + akhir.toLocaleDateString('en-GB', options);
+            } else {
+                // Jika bulan dan tahunnya berbeda
+                return awal.toLocaleDateString('en-GB', options) + ' - ' + akhir.toLocaleDateString('en-GB', options);
+            }
+        }
+
+        $.ajax({
+            url: url,
+            method: method,
+            contentType: "application/json",
+            success: function (data) {
+                // Hapus data sebelumnya dari container
+                $('#sug-pelatihan').empty();
+
+                var list = data;
+
+                if (list.length > 0) {
+                    list.forEach(function (pelatihan, index) {
+                        $.ajax({
+                            url: hostname + "GetTipePelatihan?id=" + pelatihan.id_tipe_pelatihan,
+                            method: "GET",
+                            contentType: "application/json",
+                            success: function (tipePelatihanDetails) {
+                                var tipe_pelatihan = tipePelatihanDetails.tipe_pelatihan;
+                                $.ajax({
+                                    url: hostname + "GetPelatihanDesk?id=" + pelatihan.id_pelatihan,
+                                    method: "GET",
+                                    contentType: "application/json",
+                                    success: function (desk) {
+                                        var desk_pelatihan = desk.deskripsi_pelatihan;
+                                        var maxTitleLength = 35; // Set the maximum length for the title
+                                        // Truncate the title if it is not null and exceeds the maximum length
+                                        var truncatedTitle = desk_pelatihan && desk_pelatihan.length > maxTitleLength ?
+                                            desk_pelatihan.substring(0, maxTitleLength) + '...' :
+                                            desk_pelatihan;
+                                        var newRow =
+                                            '<div class="col col-md-12" style="padding-bottom:20px;">' +
+                                            '<a href="javascript:void(0);" onclick="detailPelatihan(' + pelatihan.id_pelatihan + ');" style="text-decoration: none; color: inherit;">' +
+                                            '<div class="card" style="border-radius: 15px; background-color: rgba(255, 255, 255, 0.5); border:none;">' +
+                                            '<div class="card-body p-4">' +
+                                            '<div class="d-flex text-black">' +
+                                            '<div class="flex-shrink-0">' +
+                                            '<img src="/assets/img/' + pelatihan.path_foto_pelatihan + '" alt="Generic placeholder image" class="img-fluid" style="width: 75px; border-radius: 10px;">' +
+                                            '</div>' +
+                                            '<div class="flex-grow-1 ms-3">' +
+                                            '<h5 class="mb-1">' + pelatihan.nama_pelatihan + '</h5>' +
+                                            '<p class="mb-2" style="color: gray;">' + tipe_pelatihan + '</p>' +
+                                            '<p class="mb-1" style="color:rgba(0,0,0,0.4);font-size:14px;">' + formatDate(pelatihan.tanggal_pelatihan_awal, pelatihan.tanggal_pelatihan_akhir) + '</p>' +
+                                            '</div>' +
+                                            '</div>' +
+                                            '</div>' +
+                                            '</div>' +
+                                            '</a>' +
+                                            '</div>';
+
+                                        $('#sug-pelatihan').append(newRow);
+                                    },
+                                    error: function (xhr, status, error) {
+                                        console.error("Error:", error);
+                                    }
+                                });
+                            },
+                            error: function (xhr, status, error) {
+                                console.error("Error:", error);
+                            }
+                        });
+                    });
+                } else {
+                    // Tampilkan pesan atau card khusus jika tidak ada data yang ditemukan
+                    var noDataCard =
+                        '<div class="col-4 text-center">' +
+                        '<div class="card" style="border-radius: 15px; background-color: rgba(255, 255, 255, 0.5); border:none;">' +
+                        '<div class="card-body p-4">' +
+                        '<p class="mb-2 pb-1 text-center" style="color: gray;">No data found for the selected filter.</p>' +
+                        '</div>' +
+                        '</div>' +
+                        '</div>';
+
+                    $('#sug-pelatihan').append(noDataCard);
+                }
+            },
+            error: function (xhr, status, error) {
+                console.error("Error:", error);
+            }
+        });
+    }
+    $('#sug-pelatihan').on('click', '.pelatihan-link', function (e) {
+        e.preventDefault(); // Mencegah perilaku default dari tautan
+        var idPelatihan = $(this).data('id');
+        detailPelatihan(idPelatihan);
+    });
+    function detailPelatihan(id){
+        var hostname = "https://localhost:7033/";
+        var url = hostname + "GetPelatihanforBK?id=" + id
+        var method = "GET";
+        $.ajax({
+            url: url,
+            method: method,
+            contentType: "application/json",
+            success: function (data) {
+                if (data.bidang_keahlian == 'Technical'){
+                    window.location.href = '/Home/DetailPelatihanTechnical?id=' + id;
+                } else if (data.bidang_keahlian == 'Non-Technical'){
+                    window.location.href = '/Home/DetailPelatihanNonTechnical?id=' + id;
+                }
+            },
+        });
+    }
+
+    // Event listener untuk perubahan pada elemen <select>
+    $("#filter").change(function () {
+        // Panggil fungsi loadTenagaPengajarTechnical saat ada perubahan pada elemen <select>
+        var selectedFilter = $(this).val();
+        loadTenagaPengajarTechnical(selectedFilter);
+    });
+
+</script>
 
 
 
