--- a/IndustrialServices/wwwroot/Content/css/style.css
+++ b/IndustrialServices/wwwroot/Content/css/style.css
@@ -1752,3 +1752,18 @@ section {
   text-decoration: none;
 }
 
+/* site.css */
+.search-box {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 10px;
+}
+
+@media (max-width: 767px) {
+    .search-box {
+        position: relative;
+        padding: 10px;
+        margin-bottom: 15px;
+    }
+}
